# Voice-agent

./: .env.example  .gitignore  LICENSE  README.md  assistant.py  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  events.py  llm.py  prompts.py
automation/: __init__.py  permissions.py  platform.py
config/: __init__.py  settings.py
database/: __init__.py  db.py  models.py  schema.sql
docs/: CONFIGURATION.md  DEPLOYMENT.md  INSTALLATION.md
gui/: __init__.py  main_window.py  theme.py  worker.py
gui/panels/: __init__.py  chat_panel.py  files_panel.py  logs_panel.py  memory_panel.py  settings_panel.py
gui/widgets/: __init__.py  orb.py  toolbar.py
logs/: __init__.py  logger.py
memory/: __init__.py  manager.py
tests/: conftest.py  test_agent.py  test_memory.py  test_tools.py  test_voice.py
tools/: __init__.py  base.py  browser.py  coding.py  desktop.py  files.py  productivity.py  registry.py  system.py  vision.py
voice/: __init__.py  stt.py  tts.py  wake_word.py
